# ameoba

./: .gitignore  ARCHITECTURE.md  PAPER.md  README.md  local_server  pyproject.toml
proto/ameoba/v1/: audit.proto  ingest.proto  query.proto
scripts/: gen_proto.sh  local_server.sh
src/ameoba/: __init__.py  config.py
src/ameoba/adapters/: __init__.py
src/ameoba/adapters/elasticsearch/: store.py
src/ameoba/adapters/embedded/: __init__.py  duckdb_store.py  local_blob.py  sqlite_audit.py
src/ameoba/adapters/lancedb/: store.py
src/ameoba/adapters/neo4j/: store.py
src/ameoba/adapters/postgres/: store.py
src/ameoba/adapters/s3/: store.py
src/ameoba/api/: __init__.py
src/ameoba/api/grpc/: server.py
src/ameoba/api/grpc/servicers/: audit.py  ingest.py  query.py
src/ameoba/api/http/: app.py  debug_trace.py  dependencies.py  templating.py
src/ameoba/api/http/routers/: audit.py  catalog.py  debug.py  health.py  ingest.py  query.py  schema.py
src/ameoba/audit/: __init__.py  ledger.py  merkle.py  verifier.py
src/ameoba/audit/exporters/: jsonl.py  ocsf.py
src/ameoba/cli/: __init__.py  main.py
src/ameoba/cli/commands/: audit.py  backend.py  ingest.py  query.py  runners.py  serve.py
src/ameoba/crdt/: __init__.py  g_set.py  hlc.py  lww_register.py  or_set.py
src/ameoba/domain/: __init__.py  audit.py  catalog.py  query.py  record.py  routing.py  schema.py  security.py
src/ameoba/kernel/: __init__.py  kernel.py  router.py  staging.py  topology.py
src/ameoba/kernel/classifier/: __init__.py  heuristics.py  pipeline.py  registry.py
src/ameoba/kernel/classifier/layers/: __init__.py  binary.py  format.py  semantic.py  structural.py
src/ameoba/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/ameoba/ports/: __init__.py  audit_sink.py  classifier.py  policy_engine.py  storage.py
src/ameoba/query/: __init__.py  executor.py  planner.py
src/ameoba/query/tvf/: full_text.py  graph_traverse.py  registry.py  vector_search.py
src/ameoba/runners/: __init__.py  customer_estimate_demo.py  e2e.py
src/ameoba/schema/: __init__.py  compatibility.py  drift.py  inference.py  registry.py
src/ameoba/security/: __init__.py
src/ameoba/security/authn/: api_key.py  middleware.py  oauth2.py
src/ameoba/security/authz/: cedar_engine.py  delegation.py  gateway.py
src/ameoba/security/encryption/: envelope.py
tests/: conftest.py
tests/integration/: test_audit_hydrate.py  test_catalog_http.py  test_customer_estimate_demo.py  test_e2e_runner_http.py  test_embedded_ingest.py  test_schema_registry.py  test_staging_buffer.py
tests/unit/: test_classifier.py  test_crdt.py  test_merkle.py  test_schema.py  test_security.py
(+5 files in other folders)
