[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ameoba"
version = "0.1.0"
description = "Intelligent adaptive data fabric for agentic workflows"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Async
    "anyio>=4.4",
    # Storage — embedded (always required)
    "duckdb>=1.0",
    "aiosqlite>=0.20",
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # Observability
    "structlog>=24.2",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    # Utilities
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "orjson>=3.10",
    "jinja2>=3.1",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
]
neo4j = [
    "neo4j>=5.21",
]
elasticsearch = [
    "elasticsearch[async]>=8.13",
]
s3 = [
    "boto3>=1.34",
    "aiobotocore>=2.13",
]
lancedb = [
    "lancedb>=0.10",
    "pyarrow>=16.0",
]
grpc = [
    "grpcio>=1.64",
    "grpcio-tools>=1.64",
    "protobuf>=5.27",
]
auth = [
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
    "cedar-policy>=0.0.1",  # pip install cedar-policy when available
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers>=4.5",
    "mypy>=1.10",
    "ruff>=0.4",
    "ipython>=8.25",
]
all = [
    # Aggregate "all" extra without self-referencing the package (pip warns otherwise).
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "neo4j>=5.21",
    "elasticsearch[async]>=8.13",
    "boto3>=1.34",
    "aiobotocore>=2.13",
    "lancedb>=0.10",
    "pyarrow>=16.0",
    "grpcio>=1.64",
    "grpcio-tools>=1.64",
    "protobuf>=5.27",
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
    "cedar-policy>=0.0.1",  # pip install cedar-policy when available
]

[project.scripts]
ameoba = "ameoba.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ameoba"]

[tool.hatch.build.targets.wheel.force-include]
"src/ameoba/api/http/templates" = "ameoba/api/http/templates"

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/ameoba"]
omit = ["*/tests/*", "*/__init__.py"]
